--- a/configs/toldotechnik_rpi0_wpe_defconfig
+++ b/configs/toldotechnik_rpi0_wpe_defconfig
@@ -1,6 +1,7 @@
 BR2_arm=y
 BR2_arm1176jzf_s=y
 BR2_CCACHE=y
+BR2_CCACHE_DIR="../buildroot-ccache"
 BR2_OPTIMIZE_2=y
 BR2_GLOBAL_PATCH_DIR="board/toldotechnik_rpi/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
