--- a/configs/toldotechnik_rpi3_wpe_defconfig
+++ b/configs/toldotechnik_rpi3_wpe_defconfig
@@ -3,6 +3,7 @@ BR2_cortex_a7=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_ARM_INSTRUCTIONS_THUMB2=y
 BR2_CCACHE=y
+BR2_CCACHE_DIR="../buildroot-ccache"
 BR2_OPTIMIZE_2=y
 BR2_GLOBAL_PATCH_DIR="board/toldotechnik_rpi/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
