--- a/configs/toldotechnik_rpi3_wpe_defconfig
+++ b/configs/toldotechnik_rpi3_wpe_defconfig
@@ -2,8 +2,9 @@ BR2_arm=y
 BR2_cortex_a7=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_ARM_INSTRUCTIONS_THUMB2=y
+BR2_DL_DIR="$(TOPDIR)/../dl"
 BR2_CCACHE=y
-BR2_CCACHE_DIR="../buildroot-ccache"
+BR2_CCACHE_DIR="($(TOPDIR)/../buildroot-ccache"
 BR2_OPTIMIZE_2=y
 BR2_GLOBAL_PATCH_DIR="board/toldotechnik_rpi/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
@@ -53,6 +54,8 @@ BR2_PACKAGE_GST1_PLUGINS_UGLY=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_MPG123=y
 BR2_PACKAGE_GST_OMX=y
 BR2_PACKAGE_NINJA=y
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_BITSTREAM_VERA=y
 BR2_PACKAGE_PSPLASH=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
@@ -61,6 +64,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT73=y
 BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_NODEJS=y
 BR2_PACKAGE_NODEJS_NPM=y
