wget with SSL support

--- a/configs/toldotechnik_rpi0_wpe_defconfig
+++ b/configs/toldotechnik_rpi0_wpe_defconfig
@@ -27,6 +27,7 @@ BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2708-rpi-b-plus bcm2708-rpi-0-w"
 BR2_PACKAGE_BUSYBOX_SMP=y
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEOCONVERT=y
@@ -77,6 +78,7 @@ BR2_PACKAGE_SHARED_MIME_INFO=y
 BR2_PACKAGE_CRDA=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_NTP=y
+BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
