--- a/configs/toldotechnik_rpi0_wpe_defconfig
+++ b/configs/toldotechnik_rpi0_wpe_defconfig
@@ -2,7 +2,7 @@ BR2_arm=y
 BR2_arm1176jzf_s=y
 BR2_DL_DIR="$(TOPDIR)/../dl"
 BR2_CCACHE=y
-BR2_CCACHE_DIR="$(TOPDIR)/../buildroot-ccache"
+BR2_CCACHE_DIR="$(TOPDIR)/../buildroot3-ccache"
 BR2_OPTIMIZE_2=y
 BR2_GLOBAL_PATCH_DIR="board/toldotechnik_rpi/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
