mDNS (avahi) support added

--- a/configs/toldotechnik_rpi0_wpe_defconfig
+++ b/configs/toldotechnik_rpi0_wpe_defconfig
@@ -75,6 +75,10 @@ BR2_PACKAGE_LIBCEC=y
 BR2_PACKAGE_ORC=y
 BR2_PACKAGE_ICU_USE_ICUDATA=y
 BR2_PACKAGE_SHARED_MIME_INFO=y
+BR2_PACKAGE_AICCU=y
+BR2_PACKAGE_AVAHI=y
+BR2_PACKAGE_AVAHI_DAEMON=y
+BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
 BR2_PACKAGE_CRDA=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_NTP=y
