full screen video player

--- a/board/toldotechnik_rpi/genimage0.cfg
+++ b/board/toldotechnik_rpi/genimage0.cfg
@@ -10,6 +10,7 @@ image boot.vfat {
       "rpi-firmware/start.elf",
       "rpi-firmware/overlays",
       "url.txt",
+      "video.txt",
       "wpa_supplicant.conf.example",
       "zImage"
     }
