--- a/configs/toldotechnik_rpi3_wpe_defconfig
+++ b/configs/toldotechnik_rpi3_wpe_defconfig
@@ -54,6 +54,7 @@ BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SMOOTHSTREAMING=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY=y
 BR2_PACKAGE_GST1_PLUGINS_UGLY_PLUGIN_MPG123=y
 BR2_PACKAGE_GST_OMX=y
+BR2_PACKAGE_OMXPLAYER=y
 BR2_PACKAGE_NINJA=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
