--- a/configs/toldotechnik_rpi0_wpe_defconfig
+++ b/configs/toldotechnik_rpi0_wpe_defconfig
@@ -64,6 +64,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT73=y
 BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
+BR2_PACKAGE_KBD=y
 BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_NODEJS=y
