--- a/configs/toldotechnik_rpi3_wpe_defconfig
+++ b/configs/toldotechnik_rpi3_wpe_defconfig
@@ -16,6 +16,8 @@ BR2_TARGET_GENERIC_ISSUE="Welcome to TOLDO TECHNIK"
 BR2_TARGET_GENERIC_CABUNDLE=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
+BR2_TARGET_TZ_INFO=y
+BR2_TARGET_LOCALTIME="Europe/Zurich"
 BR2_ROOTFS_OVERLAY="board/toldotechnik_rpi/rootfs-overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/toldotechnik_rpi/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/toldotechnik_rpi/post-image.sh"
