Switched from Dropbear to OpenSSH, improved mDNS

--- a/configs/toldotechnik_rpi0_wpe_defconfig
+++ b/configs/toldotechnik_rpi0_wpe_defconfig
@@ -76,6 +76,7 @@ BR2_PACKAGE_WEBP=y
 BR2_PACKAGE_WPEWEBKIT=y
 BR2_PACKAGE_WPELAUNCHER=y
 BR2_PACKAGE_LIBCEC=y
+BR2_PACKAGE_NSS_MDNS=y
 BR2_PACKAGE_ORC=y
 BR2_PACKAGE_ICU_USE_ICUDATA=y
 BR2_PACKAGE_SHARED_MIME_INFO=y
@@ -84,8 +85,8 @@ BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
 BR2_PACKAGE_CRDA=y
-BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_NTP=y
+BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
