--- a/configs/toldotechnik_rpi3_wpe_defconfig
+++ b/configs/toldotechnik_rpi3_wpe_defconfig
@@ -78,6 +78,7 @@ BR2_PACKAGE_WEBP=y
 BR2_PACKAGE_WPEWEBKIT=y
 BR2_PACKAGE_WPELAUNCHER=y
 BR2_PACKAGE_LIBCEC=y
+BR2_PACKAGE_NSS_MDNS=y
 BR2_PACKAGE_ORC=y
 BR2_PACKAGE_ICU_USE_ICUDATA=y
 BR2_PACKAGE_SHARED_MIME_INFO=y
@@ -89,8 +90,8 @@ BR2_PACKAGE_AICCU=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
-BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_NTP=y
+BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
