some updates (gcc 6.3, node.js, terminal, new img)

--- a/configs/toldotechnik_rpi0_wpe_defconfig
+++ b/configs/toldotechnik_rpi0_wpe_defconfig
@@ -8,6 +8,7 @@ BR2_GLOBAL_PATCH_DIR="board/toldotechnik_rpi/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_9=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_GCC_VERSION_6_X=y
 BR2_PACKAGE_HOST_GDB=y
 BR2_TARGET_GENERIC_HOSTNAME="rpi0"
 BR2_TARGET_GENERIC_ISSUE="Welcome to TOLDO TECHNIK"
@@ -23,7 +24,7 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="--genimage0"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/raspberrypi/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="921b6254452db87ae0304beaa9833cfdf5083ed8"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="be97febf4aa42b1d019ad24e7948739da8557f66"
 BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi"
 BR2_LINUX_KERNEL_LZ4=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
